--- a/RapChieuPhim/App.config
+++ b/RapChieuPhim/App.config
@@ -14,7 +14,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CinemaContextDB" connectionString="data source=TAYHOANG\SQLEXPRESS;initial catalog=RapChieuPhim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model1" connectionString="data source=TAYHOANG\SQLEXPRESS;initial catalog=RapChieuPhim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CinemaContextDB" connectionString="data source=VU\SQLEXPRESS;initial catalog=RapChieuPhim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=VU\SQLEXPRESS;initial catalog=RapChieuPhim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
